--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Responsive Layout</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href='style.css' rel='stylesheet' type='text/css'>
+</head>
+<body>
+  <div class="container">
+    <div class="row">
 
+    <h1 class="menu-title">Our menu</h1>
+      <div class="col-lg-4">
+        <div class="item">
+          <div class="item-title" id="title-one">
+            <h3>Chicken</h3>
+          </div>
+          <p>
+            Chicken is a versatile and widely consumed poultry meat known for its tender texture and mild flavor. With its popularity spanning across cultures and cuisines, chicken has become a staple protein source in many households around the world. Whether grilled, roasted, fried, or simmered in various dishes, chicken offers a diverse range of culinary possibilities. Its lean meat is not only delicious but also rich in essential nutrients, including protein, and minerals. Chicken can be enjoyed in a variety of forms, from comforting soups & stews to elaborate main courses. 
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="item">
+         <div class="item-title" id="title-two">
+          <h3>Beef</h3>
+        </div>
+        <p>
+          Beef, a staple in many cuisines around the world, is a versatile and hearty source of protein derived from cattle. Renowned for its rich flavor and tenderness, beef can be prepared in various ways to cater to different tastes and preferences. From succulent steaks and juicy burgers to slow-cooked stews and savory roasts, beef's versatility allows it to be the star of both everyday meals and special occasions. The different cuts of beef offer unique textures and flavors, ranging from the tenderloin's delicate tenderness to the robust flavor of a brisket.
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-lg-tablet">
+      <div class="item">
+       <div class="item-title" id="title-three">
+        <h3>Sushi</h3>
+      </div>
+      <p>
+        Beef, a staple in many cuisines around the world, is a versatile and hearty source of protein derived from cattle. Renowned for its rich flavor and tenderness, beef can be prepared in various ways to cater to different tastes and preferences. From succulent steaks and juicy burgers to slow-cooked stews and savory roasts, beef's versatility allows it to be the star of both everyday meals and special occasions. The different cuts of beef offer unique textures and flavors, ranging from the tenderloin's delicate tenderness to the robust flavor of a brisket.
+    </div>
+  </div>
+
+</div>
+</div>
+</body>
+</html>
